Protecting auth variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-PORT=3000
-MONGODB_URI=
+PORT=3000;
+MONGODB_URI='mongodb+srv://<user>:<password>@cluster0.fl8rdre.mongodb.net/tribook';
+DB_USER='';
+DB_PASSWORD='';
+SESSION_SECRET='';
